<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:key="@string/setting_recent_requests_key"
        app:icon="@drawable/ic_round_ballot_24"
        app:persistent="false"
        app:summary="@string/setting_recent_requests_summary"
        app:title="@string/setting_recent_requests_title"/>
    <Preference
        android:key="@string/setting_bypass_config_key"
        app:icon="@drawable/ic_round_call_split_24"
        app:persistent="false"
        app:summary="@string/setting_bypass_config_summary"
        app:title="@string/setting_bypass_config_title"/>
    <Preference
        android:key="@string/setting_external_resources_key"
        app:icon="@drawable/ic_round_dynamic_feed_24"
        app:persistent="false"
        app:summary="@string/setting_external_resources_summary"
        app:title="@string/setting_external_resources_title"/>
    <Preference
        app:icon="@drawable/ic_round_adb_24"
        app:key="@string/setting_logcat_viewer_key"
        app:persistent="false"
        app:summary="@string/setting_logcat_viewer_summary"
        app:title="@string/setting_logcat_viewer_title"/>
    <Preference
        app:icon="@drawable/ic_round_network_ping_24"
        app:isPreferenceVisible="@bool/is_not_tv"
        app:key="@string/setting_cloudflare_speedtest_key"
        app:persistent="false"
        app:summary="https://speed.cloudflare.com"
        app:title="@string/cloudflare_speedtest_title"/>
    <Preference
        app:icon="@drawable/ic_round_nat_24"
        app:isPreferenceVisible="@bool/is_not_tv"
        app:key="@string/setting_nat_detect_key"
        app:persistent="false"
        app:summary="@string/setting_nat_detect_summary"
        app:title="@string/setting_nat_detect_title"/>
    <Preference
        app:icon="@drawable/ic_round_map_24"
        app:isPreferenceVisible="@bool/is_not_tv"
        app:key="@string/setting_geoip_query_key"
        app:persistent="false"
        app:summary="@string/setting_geoip_query_summary"
        app:title="@string/dialog_geoip_query_title"/>
    <Preference
        app:icon="@drawable/ic_round_my_location_24"
        app:key="@string/setting_google_api_check_key"
        app:summary="@string/setting_google_api_summary"
        app:title="@string/setting_google_api_title"/>
    <Preference
        app:icon="@drawable/ic_round_videogame_asset_24"
        app:isPreferenceVisible="@bool/is_not_tv"
        app:key="@string/setting_switch_import_key"
        app:summary="@string/setting_switch_import_summary"
        app:title="@string/setting_switch_import_title"/>
    <Preference
        app:icon="@drawable/ic_round_ios_share_24"
        app:key="@string/setting_export_log_key"
        app:title="@string/setting_export_log_title"/>
</PreferenceScreen>
