<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/setting_application_title">
        <ListPreference
            android:defaultValue="default"
            app:icon="@drawable/ic_round_language_24"
            app:key="@string/setting_app_locale_key"
            app:persistent="false"
            app:title="@string/setting_app_locale_title"
            app:useSimpleSummaryProvider="true"/>
        <Preference
            app:icon="@drawable/ic_round_color_lens_24"
            app:key="@string/setting_app_theme_config_key"
            app:summary="@string/setting_app_theme_summary"
            app:title="@string/setting_app_theme_title"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_round_accessibility_24"
            app:key="@string/setting_accessibility_mode_key"
            app:summary="@string/setting_accessibility_mode_summary"
            app:title="@string/setting_accessibility_mode_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_round_adb_24"
            app:key="@string/setting_logout_output_key"
            app:summary="@string/setting_logout_output_summary"
            app:title="@string/setting_logout_output_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_round_smart_button_24"
            app:key="@string/setting_profile_list_actions_key"
            app:summary="@string/setting_profile_list_actions_summary"
            app:title="@string/setting_profile_list_actions_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <EditTextPreference
            android:title="@string/setting_profile_fetch_timeout_title"
            android:defaultValue="5000"
            app:dialogTitle="@string/profile_fetch_timeout_dialog_title"
            app:icon="@drawable/ic_round_access_time_24"
            app:key="@string/setting_profile_fetch_timeout"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_round_edit_note_24"
            app:key="@string/setting_use_external_editor_key"
            app:title="@string/setting_use_external_editor_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_round_update_24"
            app:key="@string/setting_update_profiles_after_vpn_established_key"
            app:summary="@string/setting_update_profiles_after_vpn_established_summary"
            app:title="@string/setting_update_profiles_after_vpn_established_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_round_visibility_off_24"
            app:key="@string/setting_hide_from_recent_task_key"
            app:title="@string/setting_hide_from_recent_task_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_round_view_carousel_24"
            app:key="@string/setting_masked_from_recent_task_key"
            app:title="@string/setting_masked_from_recent_task_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/backup_and_restore">
        <Preference
            android:key="backup_export"
            app:icon="@drawable/ic_round_backup_24"
            app:summary="@string/backup_export_summary"
            app:title="@string/backup_export"/>
        <Preference
            android:key="backup_import"
            app:icon="@drawable/ic_round_settings_backup_restore_24"
            app:summary="@string/backup_import_summary"
            app:title="@string/backup_import"/>
    </PreferenceCategory>
</PreferenceScreen>
