<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/vpn">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_outline_filter_alt_24"
            app:key="@string/setting_allow_lan_key"
            app:summary="@string/setting_allow_lan_summary"
            app:title="@string/setting_allow_lan_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_round_alt_route_24"
            app:key="@string/setting_allow_bypass_key"
            app:summary="@string/setting_allow_bypass_summary"
            app:title="@string/setting_allow_bypass_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_round_devices_24"
            app:key="@string/setting_start_when_boot_key"
            app:summary="@string/setting_start_when_boot_summary"
            app:title="@string/setting_start_when_boot_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <Preference
            app:defaultValue="32000"
            app:icon="@drawable/ic_round_settings_ethernet_24"
            app:key="@string/setting_mtu_key"
            app:summary="@string/setting_mtu_summary"
            app:title="@string/setting_mtu_title"/>
        <ListPreference
            android:entries="@array/setting_traffic_statistics_entries"
            app:defaultValue="all_counted"
            app:entryValues="@array/setting_traffic_statistics_entry_values"
            app:icon="@drawable/ic_round_data_usage_24"
            app:key="@string/setting_traffic_statistics_key"
            app:title="@string/setting_traffic_statistics_title"
            app:useSimpleSummaryProvider="true"/>
        <Preference
            app:icon="@drawable/ic_round_map_24"
            app:isPreferenceVisible="@bool/is_not_tv"
            app:key="@string/setting_geoip_config_key"
            app:persistent="false"
            app:summary="@string/setting_geoip_config_summary"
            app:title="@string/dialog_geoip_config_title"/>
        <ListPreference
            app:defaultValue="legacy"
            app:entries="@array/setting_tls_fingerprint_entries"
            app:entryValues="@array/setting_tls_fingerprint_entry_values"
            app:icon="@drawable/ic_round_fingerprint_24"
            app:key="@string/setting_tls_fingerprint_key"
            app:title="@string/setting_tls_engine_title"
            app:useSimpleSummaryProvider="true"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_round_monitor_heart_24"
            app:key="@string/setting_tcp_keep_alive_key"
            app:summary="@string/setting_tcp_keep_alive_summary"
            app:title="@string/setting_tcp_keep_alive_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_round_troubleshoot_24"
            app:key="@string/setting_sshdump_key"
            app:summary="@string/setting_sshdump_summary"
            app:title="@string/setting_sshdump_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_round_http_24"
            app:key="@string/setting_enable_vpn_http_proxy_key"
            app:summary="@string/setting_enable_vpn_http_proxy_summary"
            app:title="@string/setting_enable_vpn_http_proxy_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_round_auto_fix_high_24"
            app:key="@string/setting_auto_fix_dns_poisoning_key"
            app:summary="@string/setting_auto_fix_dns_poisoning_summary"
            app:title="@string/setting_auto_fix_dns_poisoning_title"
            app:widgetLayout="@layout/layout_switch_preference"/>
    </PreferenceCategory>
</PreferenceScreen>
