<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_round_edit_24"
        android:id="@+id/edit"
        android:title="@string/edit"
        app:iconTint="?attr/colorControlNormal"/>
    <item
        android:icon="@drawable/ic_round_preview_24"
        android:id="@+id/view"
        android:title="@string/view"
        app:iconTint="?attr/colorControlNormal"/>
    <item
        android:icon="@drawable/ic_round_insert_drive_file_24"
        android:id="@+id/file"
        android:title="@string/file"
        app:iconTint="?attr/colorControlNormal">
        <menu>
            <item
                android:icon="@drawable/ic_round_delete_24"
                android:id="@+id/delete"
                android:title="@string/delete"
                app:iconTint="?attr/colorControlNormal"/>
            <item
                android:icon="@drawable/ic_round_file_copy_24"
                android:id="@+id/clone"
                android:title="@string/clone"
                app:iconTint="?attr/colorControlNormal"/>
            <item
                android:icon="@drawable/ic_round_drive_file_rename_outline_24"
                android:id="@+id/rename"
                android:title="@string/rename"
                app:iconTint="?attr/colorControlNormal"/>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_round_share_24"
        android:id="@+id/share"
        android:title="@string/share"
        app:iconTint="?attr/colorControlNormal">
        <menu>
            <item
                android:icon="@drawable/ic_round_share_24"
                android:id="@+id/share_file"
                android:title="@string/share_file"
                app:iconTint="?attr/colorControlNormal"/>
            <item
                android:icon="@drawable/ic_round_link_24"
                android:id="@+id/copy_url"
                android:title="@string/copy_subscribe_url"
                app:iconTint="?attr/colorControlNormal"/>
            <item
                android:icon="@drawable/ic_round_qr_code_24"
                android:id="@+id/qrcode"
                android:title="@string/display_qrcode"
                app:iconTint="?attr/colorControlNormal"/>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_round_cloud_download_24"
        android:id="@+id/update"
        android:title="@string/check_update"
        app:iconTint="?attr/colorControlNormal"/>
    <item
        android:icon="@drawable/ic_round_content_copy_24"
        android:id="@+id/copy_invalid_reason"
        android:title="@string/copy_invalid_reason"
        app:iconTint="?attr/colorControlNormal"/>
    <item
        android:icon="@drawable/ic_round_push_pin_24"
        android:id="@+id/pin"
        android:title="@string/pin_to_top"
        app:iconTint="?attr/colorControlNormal"/>
    <item
        android:icon="@drawable/ic_round_push_pin_24"
        android:id="@+id/unpin"
        android:title="@string/unpin"
        app:iconTint="?attr/colorControlNormal"/>
</menu>
