<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_round_search_24"
        android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_round_undo_24"
        android:enabled="false"
        android:id="@+id/undo"
        android:title="@string/undo"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_round_redo_24"
        android:enabled="false"
        android:id="@+id/redo"
        android:title="@string/redo"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_round_save_24"
        android:id="@+id/save"
        android:title="@string/save"
        app:showAsAction="always"/>
</menu>
