<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_round_dashboard_24"
            android:id="@+id/navigation_dashboard"
            android:checked="true"
            android:title="@string/title_dashboard"
            app:showAsAction="ifRoom"/>
        <item
            android:icon="@drawable/ic_round_adjust_24"
            android:id="@+id/navigation_proxygroups"
            android:title="@string/title_proxies"
            app:showAsAction="ifRoom"/>
        <item
            android:icon="@drawable/ic_round_folder_24"
            android:id="@+id/navigation_profiles"
            android:title="@string/title_profiles"
            app:showAsAction="ifRoom"/>
        <item
            android:icon="@drawable/ic_round_construction_24"
            android:id="@+id/navigation_tools"
            android:title="@string/title_tools"
            app:showAsAction="ifRoom"/>
    </group>
</menu>
