<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="6dp"
    app:strokeWidth="0dp"
    style="?attr/materialCardViewElevatedStyle">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/add"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/doh_server"
            app:startIconDrawable="@drawable/ic_round_link_24"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textUri"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/Widget.Material3Expressive.Button.TextButton"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginStart="8dp"
                style="@style/Widget.Material3Expressive.Button.TextButton"/>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
